Saving progress, adding blur to slide bg and fixing spacing

--- a/app.css
+++ b/app.css
@@ -56,10 +56,10 @@
 @layer components {
   /* LAYOUT COMPONENTS */
   .card-container {
-    @apply md:rounded-3xl rounded-xl mb-3 xl:py-16 xl:px-16 lg:py-8 lg:px-8 px-3 pt-5 pb-3 border border-brand-border;
+    @apply md:rounded-3xl rounded-2xl mb-3 xl:py-16 xl:px-16 lg:py-8 lg:px-8 px-3 pt-5 pb-3 border border-brand-border;
   }
   .card-container-small {
-    @apply md:rounded-3xl rounded-xl mb-3 px-6 py-6 border border-brand-border;
+    @apply md:rounded-3xl rounded-2xl mb-3 px-6 py-6 border border-brand-border;
   }
 
   .card-container-inner {
